--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-model": "^4.3.1",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
